<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ViewWithSpinners"
    android:background="@color/ButtonAndSpinnerBackgroundColor" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20sp"
        android:src="@drawable/masseogvolumbalanse" />

    <TextView
        android:id="@+id/tvm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/V1" />

    <EditText
        android:id="@+id/etMOVBV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="[ml]"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/ButtonTextColor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/P2" />

    <EditText
        android:id="@+id/etMOVBP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="[kg/l]"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/ButtonTextColor" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Pv" />

    <EditText
        android:id="@+id/etMOVBPV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="[kg/l]"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/ButtonTextColor" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/P1" />

    <EditText
        android:id="@+id/etMOVBP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="[kg/l]"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/ButtonTextColor" >
    </EditText>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Vv" />

    <EditText
        android:id="@+id/etMOVBVv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="[ml]"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/ButtonTextColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button style="@style/UpdateButton" />

        <Button style="@style/ClearButton" />
        
    </LinearLayout>

</LinearLayout>