<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ViewWithSpinners"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ButtonAndSpinnerBackgroundColor" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20sp"
        android:src="@drawable/total_hardhet" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TotHardVEDTACaCO3" 
        android:lineSpacingExtra="6dp"/>

    <EditText
        android:id="@+id/etTotHardVEDTACaCO3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="[ml]"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/ButtonTextColor" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TotHardVEDTACa2" 
        android:lineSpacingExtra="4dp"/>

    <EditText
        android:id="@+id/etTotHardVCa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="[ml]"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/ButtonTextColor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TotHardVF" 
        android:lineSpacingExtra="5dp"/>

    <EditText
        android:id="@+id/etTotHardVF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="[ml]"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/ButtonTextColor" />

    <EditText
        android:id="@+id/etTotHardHideThis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvm6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/TotHardCaCO3mgl"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvm666"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text=" = "
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvTotHardCaCo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text=""
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvm6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/TotHardKalsium"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvm666"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text=" = "
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvTotHardCa2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text=""
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tvm6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/TotHardMagnesium"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvm6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text=" = "
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvTotHardMg2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text=""
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/bTotHardUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CalcButtonUpdate"  />

        <Button
            android:id="@+id/bTotHardClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CalcButtonClear"  />
    </LinearLayout>

</LinearLayout>